--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -1,7 +1,14 @@
-aca aparecera el form
+<div class="max-w-lg mx-auto my-8 p-6 bg-gray-50 rounded-lg shadow-lg border border-gray-200">
+    <h2 class="text-3xl font-semibold text-gray-800 mb-6">Agregar Producto</h2>
 
-<form action="{% url 'add_product' %}" method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Agregar</button>
-</form>
+    <form action="{% url 'add_product' %}" method="post" class="space-y-4">
+        {% csrf_token %}
+        
+        {{ form.as_p }}
+
+        <button type="submit"
+            class="w-full py-3 bg-indigo-600 text-white font-semibold rounded-md shadow-md hover:bg-indigo-700 hover:shadow-lg transition duration-300">
+            Agregar Producto
+        </button>
+    </form>
+</div>
