--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 
-<h1 class="text-4xl font-bold text-gray-800 my-8">Lista de Productos</h1>
+<h1 class="text-4xl font-extrabold text-gray-800 my-8 text-center">Lista de Productos</h1>
 
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
     {% for product in products %}
-    <a href="#" class="group relative block overflow-hidden rounded-lg shadow-lg transition hover:shadow-xl">
+    <a href="#" class="group relative block overflow-hidden rounded-lg shadow-md hover:shadow-xl transition duration-300">
         <button
-          class="absolute end-4 top-4 z-10 rounded-full bg-white p-1.5 text-gray-900 hover:text-gray-500 transition"
+          class="absolute right-4 top-4 z-10 rounded-full bg-white p-1.5 text-gray-900 hover:text-gray-500 transition duration-300"
         >
           <span class="sr-only">Wishlist</span>
           <svg
@@ -35,23 +35,30 @@
         />
         {% endif %}
 
-        <div class="relative border border-gray-200 bg-white p-6 rounded-b-lg">
+        <div class="relative border-t border-gray-200 bg-white p-6 rounded-b-lg">
           <span class="inline-block bg-green-500 text-white text-xs font-semibold rounded px-2 py-1"> Nuevo </span>
 
-          <h3 class="mt-4 text-xl font-semibold text-gray-900 group-hover:text-green-600">{{ product.name }}</h3>
+          <h3 class="mt-4 text-xl font-semibold text-gray-900 group-hover:text-green-600 transition duration-300">
+            {{ product.name }}
+          </h3>
 
           <p class="mt-2 text-lg font-bold text-gray-700">${{product.price}}</p>
           
           <p class="mt-1.5 text-sm text-gray-500">{{ product.description }}</p>
 
+
+         <form action="{% url 'add_product' %}" class="mt-4" method="post">
+          {% csrf_token %}
+          <input type="hidden" name="product" value="{{ product.id }}">
           
-          <!-- <form class="mt-4">
             <button
               class="w-full rounded-lg bg-green-600 text-white py-3 text-sm font-medium transition hover:bg-green-700"
             >
-              Añadir al carrito
+              Agregar Pedido
             </button>
-          </form> -->
+          </form>
+          
+          
         </div>
       </a>
     {% endfor %}
